1-airflow-webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: pdp-dev
  labels:
    tier: airflow
    component: webserver
spec:
  replicas: 1 # Adjust as needed
  selector:
    matchLabels:
      tier: airflow
      component: webserver
  template:
    metadata:
      labels:
        tier: airflow
        component: webserver
    spec:
      serviceAccountName: "pdp-default"
      restartPolicy: Always
      securityContext:
        runAsUser: 71357
        fsGroup: 71357
      containers:
        - name: webserver
          image: docker-local.artifactory.medimpact.com/com/medimpact/pdp/medgen-airflow-python:0.0.2-build99
          imagePullPolicy: Always
          args:
            - "bash"
            - "-c"
            - "exec airflow webserver"
          ports:
            - name: webserver-ui
              containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: /health # Airflow health check endpoint
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: dags-volume
              mountPath: /opt/airflow/dags
            - name: config
              mountPath: /opt/airflow/airflow.cfg
              subPath: airflow.cfg
              readOnly: true
            - name: config # For airflow_local_settings.py if used
              mountPath: /opt/airflow/config/airflow_local_settings.py
              subPath: airflow_local_settings.py
              readOnly: true
            - name: logs # Webserver also generates logs
              mountPath: /opt/airflow/logs
      volumes:
        - name: dags-volume
          emptyDir: {}
        - name: config
          configMap:
            name: airflow-config
        - name: logs # Using an emptyDir for webserver logs, consider remote logging for prod
          emptyDir: {}
