11-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-worker
  namespace: pdp-dev
  labels:
    tier: airflow
    component: worker
    executor: "CeleryExecutor"
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: airflow
      component: worker
  template:
    metadata:
      labels:
        tier: airflow
        component: worker
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      serviceAccountName: "pdp-default"
      securityContext:
        runAsUser: 71357
        fsGroup: 71357
      containers:
        - name: worker
          image: docker-local.artifactory.medimpact.com/com/medimpact/pdp/medgen-airflow-python:0.0.2-build99
          imagePullPolicy: Always
          args:
            - "bash"
            - "-c"
            - "exec airflow celery worker"
          resources:
            {}
          volumeMounts:
            - name: dags-volume
              mountPath: "/opt/airflow/dags"
            - name: config
              mountPath: /opt/airflow/pod_templates/pod_template_file.yaml
              subPath: pod_template_file.yaml
              readOnly: true
            - name: logs
              mountPath: "/opt/airflow/logs"
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
            - name: config
              mountPath: "/opt/airflow/config/airflow_local_settings.py"
              subPath: airflow_local_settings.py
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 20
            failureThreshold: 5
            periodSeconds: 60
            exec:
              command:
                - airflow
                - celery
                - status
        - name: worker-log-groomer
          image: docker-local.artifactory.medimpact.com/com/medimpact/pdp/medgen-airflow-python:0.0.2-build99
          imagePullPolicy: Always
          resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
          args:
            - "bash"
            - "-c"
            - |
              sleep 60
              exec \
              find /opt/airflow/logs -mtime +1 -type f -delete
          volumeMounts:
            - name: logs
              mountPath: "/opt/airflow/logs"
      volumes:
        - name: dags-volume
          emptyDir: {}
        - name: config
          configMap:
            name: airflow-config
        - name: logs
          emptyDir: {}
