9-airflow-dag-processor-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-dag-processor
  namespace: pdp-dev
  labels:
    tier: airflow
    component: dag-processor
    executor: "CeleryExecutor"
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: airflow
      component: dag-processor
  template:
    metadata:
      labels:
        tier: airflow
        component: dag-processor
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      serviceAccountName: "pdp-default"
      securityContext:
        runAsUser: 71357
        fsGroup: 71357
      containers:
        - name: dag-processor
          image: docker-local.artifactory.medimpact.com/com/medimpact/pdp/medgen-airflow-python:0.0.2-build99
          imagePullPolicy: Always
          args:
            - "bash"
            - "-c"
            - "exec airflow dag-processor"
          resources:
            {}
          volumeMounts:
            - name: dags-volume
              mountPath: "/opt/airflow/dags"
            - name: logs
              mountPath: "/opt/airflow/logs"
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
            - name: config
              mountPath: "/opt/airflow/config/airflow_local_settings.py"
              subPath: airflow_local_settings.py
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 20
            failureThreshold: 5
            periodSeconds: 60
            exec:
              command:
                - sh
                - -c
                - |
                  CONNECTION_CHECK_MAX_COUNT=0 AIRFLOW__LOGGING__LOGGING_LEVEL=ERROR exec /entrypoint \
                  airflow jobs check --local --job-type DagProcessorJob
        - name: dag-processor-log-groomer
          image: docker-local.artifactory.medimpact.com/com/medimpact/pdp/medgen-airflow-python:0.0.2-build99
          imagePullPolicy: Always
          resources:
            {}
          args:
            - "bash"
            - "-c"
            - |
              sleep 60
              exec \
              find /opt/airflow/logs/dag_processor_manager -mtime +1 -type f -delete
          volumeMounts:
            - name: logs
              mountPath: "/opt/airflow/logs"
      volumes:
        - name: dags-volume
          emptyDir: {}
        - name: config
          configMap:
            name: airflow-config
        - name: logs
          emptyDir: {}
