13-airflow-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-redis
  namespace: pdp-dev
  labels:
    tier: airflow
    component: redis
spec:
  type: ClusterIP
  selector:
    tier: airflow
    component: redis
  ports:
    - name: redis-db
      protocol: TCP
      port: 6379
      targetPort: 6379
